<resources>
    <string name="app_name">AIT</string>
    <string name="sign_up">Sign Up</string>
    <string name="firstname">Name</string>
    <string name="username">Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="you_have_account">have an account?</string>
    <string name="reg_id">Registration ID</string>
    <string name="dob">Select Date of Birth</string>
    <string name="logintextview">Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="explain">We are here, Chill</string>
    <string name="go_back_to_login_page">Back to login</string>
    <string name="recover">Recover</string>


    <string-array name="relation">
        <item>Student</item>
        <item>Teachers</item>
        <item>Supporting Staff</item>
        <item>VIP</item>
        <item>Outsider</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="write_your_title_here">write your item name here</string>
    <string name="write_your_content_here">write item price here</string>

</resources>