<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".SignUp">

    <LinearLayout

        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="17dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_draw"
                android:fontFamily="@font/amaranth"
                android:hint="@string/firstname"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/signup_spinner"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="17dp"
                >
            </Spinner>


            <EditText
                android:id="@+id/signup_regid"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="17dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_draw"
                android:fontFamily="@font/amaranth"
                android:hint="@string/reg_id"
                android:inputType="textPostalAddress"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/signup_dob"
                android:layout_width="match_parent"
                android:fontFamily="@font/amaranth"
                android:textSize="15sp"
                android:background="@drawable/rectangle_draw"
                android:text="@string/dob"
                android:padding="13.5dp"
                android:layout_height="43dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:layout_marginBottom="17dp"
                android:paddingRight="0dp"
                android:textColor="#000000" >
            </TextView>



            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:autofillHints=""
                android:layout_marginBottom="17dp"
                android:layout_height="43dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/rectangle_draw"
                android:textSize="15sp"
                android:fontFamily="@font/amaranth"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_draw"
                android:fontFamily="@font/amaranth"
                android:hint="@string/password"
                android:layout_marginBottom="17dp"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/signup_register"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/button"
                android:textSize="15sp"
                android:text="@string/register"
                android:textAllCaps="false"
                app:backgroundTint="#11B154" />

            <ProgressBar
                android:id="@+id/signup_pgbar"
                android:layout_width="34dp"
                android:layout_marginTop="10dp"
                android:layout_height="34dp"
                android:visibility="gone"
                android:layout_gravity="center">

            </ProgressBar>
        </FrameLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:text="@string/you_have_account"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_marginBottom="30dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/logintextview"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
